UI Changes and Enhancements

--- a/Cashify/Components/Layout/Filter.razor
+++ b/Cashify/Components/Layout/Filter.razor
@@ -1,11 +1,9 @@
 ﻿<div>
     <MudMenu @ref="FilterMenu" AnchorOrigin="Origin.BottomRight" LockScroll="true" TransformOrigin="Origin.TopLeft">
         <ActivatorContent>
-            <MudPaper Outlined="true" Class="filter__icon">
                 <MudTooltip Text="Filter" Arrow="true" Color="Color.Primary">
-                    <MudIconButton Class="drawer-button" Icon="@Icons.Material.Rounded.Filter" Color="Color.Primary" Edge="Edge.Start" />
+                    <MudIconButton Class="drawer-button" Icon="fas fa-sliders-h" Color="Color.Primary" Edge="Edge.Start" />
                 </MudTooltip>
-            </MudPaper>
         </ActivatorContent>
         <ChildContent>
             <div class="filter-dropdown pa-3">
