--- a/Cashify/Components/Layout/MainLayout.razor
+++ b/Cashify/Components/Layout/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-<CascadingValue Value="this">
+
+<CascadingValue Value="this" >
     <MudRTLProvider RightToLeft="@RightToLeft">
         <MudThemeProvider Theme="Theme" />
         <MudPopoverProvider />
@@ -8,22 +9,22 @@
         <MudSnackbarProvider />
         @if (UserDetails.Id == Guid.Empty)
         {
-            <div class="container" style="height: 100vh; justify-content: center; align-items: center;">
+            <div class="container font-poppins" style="height: 100vh; justify-content: center; align-items: center;">
                 @Body
             </div>
         }
         else
         {
-            <MudLayout>
+            <MudLayout Class="font-poppins">
                 <MudAppBar Class="topbar bg-white" Elevation="0">
                     <div class="d-flex align-items-center justify-content-start">
                         <MudTooltip Text="Toggle Drawer" Color="Color.Primary">
                             <MudIconButton Class="drawer-button" Icon="@Icons.Material.Rounded.Notes" Color="Color.Inherit" Edge="Edge.Start" OnClick="DrawerToggle"/>
                         </MudTooltip>
 
-                        <MudText Typo="Typo.h6" HtmlTag="h1" Color="Color.Inherit" Class="topbar-text ms-2">
-                            @PageTitle
-                        </MudText>
+                        @* <MudText Typo="Typo.h6" HtmlTag="h1" Color="Color.Inherit" Class="topbar-text ms-2"> *@
+                        @*     @PageTitle *@
+                        @* </MudText> *@
                     </div>
                     <div class="d-flex align-items-center gap-x-4">
                         <MudMenu AnchorOrigin="Origin.BottomRight" LockScroll="true" TransformOrigin="Origin.TopRight">
