--- a/Cashify/Components/Pages/Dashboard/Dashboard.razor.css
+++ b/Cashify/Components/Pages/Dashboard/Dashboard.razor.css
@@ -45,6 +45,7 @@ body {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    padding: 10px;
 }
 
 .card {
@@ -53,7 +54,8 @@ body {
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     flex: 1;
-    margin-right: 15px;
+    margin-top:10px;
+    margin-right: 10px;
     transition: transform 0.2s;
 }
 
